redesign of translation statistics and filters

--- a/react/assets/forus-platform/scss/_common/components/tables.scss
+++ b/react/assets/forus-platform/scss/_common/components/tables.scss
@@ -547,6 +547,14 @@
             &.selected {
                 background: #f8fbf7;
             }
+
+            &.tr-totals {
+                border-top: 2px solid var(--color-primary);
+
+                td {
+                    background-color: #fafbfc;
+                }
+            }
         }
 
         & > tbody:last-child > tr {
