add bulk actions to reservations

--- a/react/assets/forus-platform/scss/_common/includes/common.scss
+++ b/react/assets/forus-platform/scss/_common/includes/common.scss
@@ -120,6 +120,10 @@ img {
     transition: color 0.3s;
 }
 
+.text-default {
+    font: 400 13px/20px var(--base-font);
+}
+
 .text-muted {
     color: #a1a1a1 !important;
     transition: color 0.3s;
