--- a/react/assets/forus-webshop/scss/includes/blocks/product.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/product.scss
@@ -74,6 +74,7 @@
                         display: flex;
                         font: 600 12px/16px var(--base-font);
                         color: #646f79;
+                        margin: 0 0;
                     }
 
                     .product-property-value {
@@ -95,8 +96,6 @@
                             flex-direction: row;
                             gap: 8px;
                             font: 600 14px/18px var(--base-font);
-                            text-decoration: underline;
-                            cursor: pointer;
                             align-items: center;
                             flex: 0 0 calc(100% / 3);
                             padding-right: 20px;
@@ -111,12 +110,33 @@
                                 width: 24px;
                                 height: 24px;
                             }
-
-                            &:hover {
-                                text-decoration: none;
-                            }
                         }
                     }
+
+                    .product-property-info-link {
+                        background: none;
+                        border: none;
+                        padding: 0;
+                        margin: 0;
+                        appearance: none;
+                        color: inherit;
+                        display: inline-flex;
+                        width: fit-content;
+                        font: 600 13px/18px var(--base-font);
+                        text-decoration: underline;
+                        align-items: center;
+                        cursor: pointer;
+                        gap: 4px;
+
+                        .mdi {
+                            font-size: 16px;
+                        }
+
+                        &:hover {
+                            text-decoration: none;
+                        }
+                    }
+
                 }
 
                 &:last-child {
