--- a/react/assets/forus-webshop/scss/includes/blocks/block-showcase.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-showcase.scss
@@ -54,7 +54,6 @@
         .showcase-aside {
             flex: 0 0 var(--aside-width);
             min-width: 0;
-            overflow: auto;
 
             .showcase-aside-block {
                 position: relative;
@@ -684,9 +683,7 @@
             flex-direction: column;
 
             .showcase-aside {
-                width: 100%;
-                max-width: 100%;
-                margin: 0 20px 10px -20px;
+                margin: 0 -20px 10px -20px;
                 min-width: 0;
                 padding: 0;
                 border-top: 1px solid var(--border-color);
@@ -702,7 +699,7 @@
                     margin-bottom: 0;
                     border-top: none;
                     border-radius: 0;
-                    padding-top: 10px;
+                    padding: 20px 20px 20px;
                 }
 
                 &.show-mobile {
