fund request clarification form minor refactoring

--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -3941,6 +3941,10 @@ body {
                     .clarification-item-text {
                         @include ellipsis();
                     }
+
+                    &:last-child {
+                        border-bottom: none;
+                    }
                 }
 
                 .clarification-item-attachments {
