--- a/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    align-items: var(--faq-align);
+    align-items: center;
 
     .faq-item {
         background: #fff;
@@ -13,7 +13,7 @@
         box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.1);
         transition: 0.4s;
         max-width: 100%;
-        width: var(--faq-width);
+        width: 820px;
 
         .faq-item-header {
             padding: 15px 45px 15px 30px;
