--- a/react/assets/forus-webshop/scss/includes/sections/section-faq.scss
+++ b/react/assets/forus-webshop/scss/includes/sections/section-faq.scss
@@ -4,4 +4,5 @@
     position: relative;
     padding: var(--section-faq-padding);
     background: var(--section-faq-background);
+    border-top: 1px solid var(--border-color);
 }
