--- a/react/assets/forus-webshop/scss/includes/blocks/block-products-list.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-products-list.scss
@@ -116,10 +116,6 @@
                         white-space: nowrap;
                         gap: 4px;
                         font: 500 10px/14px var(--base-font);
-                        background: transparent;
-                        transition:
-                            background-color 0.4s,
-                            color 0.4s;
                         border-radius: var(--border-radius);
 
                         .mdi {
@@ -157,10 +153,6 @@
                                 content: none;
                             }
                         }
-
-                        &:hover {
-                            background: #f5f5f5;
-                        }
                     }
                 }
             }
@@ -182,13 +174,25 @@
     @media screen and (max-width: 1000px) {
         .product-item {
             position: relative;
+            overflow: hidden;
 
             .product-photo {
-                flex: 0 0 80px;
+                position: absolute;
+                left: 0;
+                top: 0;
+                padding: 12px 12px;
+
+                img {
+                    width: 60px;
+                }
             }
 
             .product-content {
+                padding: 0;
+
                 .product-details {
+                    padding: 12px 12px 12px 82px;
+
                     .product-title {
                         font: 700 15px/22px var(--heading-font-family);
                     }
@@ -199,41 +203,28 @@
                 }
 
                 .product-actions {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 30px;
-                    padding-bottom: 55px;
+                    border-top: 1px solid var(--border-color);
+                    background: #fbfbfb;
+                    padding: 15px 20px;
 
                     .product-price {
-                        font: 700 18px/24px var(--base-font);
-                        flex: 1 0 auto;
-                        justify-content: flex-end;
+                        font: 700 16px/24px var(--base-font);
                     }
 
                     .product-icons {
-                        justify-content: flex-start;
-                        width: 100%;
-                        flex-direction: row;
-                        margin: 0 0;
-                        border-bottom-left-radius: var(--border-radius);
-                        border-bottom-right-radius: var(--border-radius);
-                        border-top: 1px solid var(--border-color);
-                        height: 55px;
-                        position: absolute;
-                        left: 0;
-                        right: 0;
-                        bottom: 0;
-                        padding: 0 10px 2px;
-                        align-items: center;
+                        gap: 20px;
 
                         .product-icons-item {
-                            margin: 0 0 !important;
-                            padding: 5px 10px;
-                            flex: 1 1 auto;
+                            padding: 0 0;
+                            margin: 0 0;
+
+                            .mdi {
+                                line-height: 24px;
+                                font-size: 24px;
+                            }
 
                             &:after {
-                                right: 0;
+                                content: none;
                             }
                         }
                     }
