--- a/react/assets/forus-platform/scss/_common/components/forms.scss
+++ b/react/assets/forus-platform/scss/_common/components/forms.scss
@@ -69,6 +69,10 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+
+            .form-group {
+                margin-bottom: 0;
+            }
         }
 
         &.form-pane-lg {
