Improving additional information request

--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -99,6 +99,8 @@
 @import 'blocks/block-label-tabs.scss';
 @import 'blocks/block-translation-stats.scss';
 @import 'blocks/block-provider-product-overview.scss';
+@import 'blocks/block-attachments-list.scss';
+@import 'blocks/block-request-clarification.scss';
 
 // Select controls
 @import 'select-controls/select-control-funds';
@@ -3898,174 +3900,6 @@ body {
             display: flex;
             padding: 15px 0 0;
             justify-content: center;
-        }
-    }
-
-    &.block-request-clarification {
-        display: flex;
-        flex-direction: column;
-
-        .block-title {
-            font: 500 14px/26px var(--base-font);
-            color: #282b39;
-            margin-bottom: 10px;
-        }
-
-        .clarification-item {
-            display: flex;
-            flex-direction: row;
-            margin-bottom: 15px;
-
-            .clarification-item-nth {
-                width: 30px;
-                min-width: 30px;
-                height: 30px;
-                background: #fff;
-                border: 1px solid var(--border-color);
-                display: flex;
-                border-radius: 30px;
-                font: 600 13px/28px var(--base-font);
-                text-align: center;
-                justify-content: center;
-                margin-right: 10px;
-            }
-
-            .clarification-item-details {
-                display: flex;
-                flex-direction: column;
-                border: 1px solid var(--border-color);
-                border-radius: var(--border-radius);
-                background: #fff;
-                box-shadow: 2px 4px 2px rgba($color: #000000, $alpha: 0.02);
-                flex-grow: 1;
-
-                .clarification-item-icon {
-                    position: absolute;
-                    left: 15px;
-                    top: 10px;
-                    font-size: 16px;
-                    line-height: 24px;
-                }
-
-                .clarification-item-question,
-                .clarification-item-answer {
-                    border-bottom: 1px solid var(--border-color);
-                    padding: 10px 20px 10px 40px;
-                    position: relative;
-                    width: 100%;
-
-                    .clarification-item-text {
-                        @include ellipsis();
-                    }
-
-                    &:last-child {
-                        border-bottom: none;
-                    }
-                }
-
-                .clarification-item-attachments {
-                    .block.block-attachments-list {
-                        .block-attachments-inner {
-                            margin-bottom: 0;
-                        }
-
-                        .attachment-item {
-                            border: none;
-                            margin-bottom: 0;
-                        }
-                    }
-                }
-            }
-
-            &:last-child,
-            &:last-of-type {
-                margin-bottom: 0;
-            }
-        }
-    }
-
-    &.block-attachments-list {
-        @include cf();
-
-        .block-attachments-inner {
-            margin: 0 0 -10px;
-            width: 100%;
-            float: left;
-        }
-
-        .attachment-item {
-            background: #fff;
-            display: flex;
-            max-width: 100%;
-            width: 100%;
-            border: 1px solid #d4d9dd;
-            flex-direction: row;
-            padding: 5px 15px;
-            border-radius: var(--border-radius);
-            float: left;
-            margin-bottom: 10px;
-
-            .attachment-icon {
-                display: flex;
-                flex-direction: row;
-
-                .mdi {
-                    font-size: 18px;
-                    line-height: 25px;
-                    color: #004195;
-                    margin-right: 10px;
-                }
-
-                .attachment-size {
-                    color: #646f79;
-                    margin-right: 30px;
-                    font: 500 12px/25px var(--base-font);
-                }
-            }
-
-            .attachment-name {
-                @include ellipsis();
-                color: #262626;
-                font: 500 12px/25px var(--base-font);
-                flex-grow: 1;
-            }
-
-            .attachment-date {
-                font: 400 12px/25px var(--base-font);
-                margin-right: 20px;
-            }
-
-            .attachment-preview {
-                display: flex;
-                @include ellipsis();
-                color: #262626;
-                font: 500 12px/25px var(--base-font);
-                flex: unset;
-
-                .mdi {
-                    float: left;
-                    font-size: 1.5em;
-                    margin-right: 4px;
-                    color: #555;
-
-                    &:hover {
-                        color: var(--color-primary);
-                    }
-                }
-            }
-        }
-
-        &.block-attachments-list-half {
-            .block-attachments-inner {
-                margin: 0 0 -10px;
-            }
-            .attachment-item {
-                width: calc(50% - 10px);
-
-                &:nth-child(odd) {
-                    margin-right: 20px;
-                }
-            }
         }
     }
 
