--- a/react/assets/forus-webshop/scss/includes/includes/common.scss
+++ b/react/assets/forus-webshop/scss/includes/includes/common.scss
@@ -38,6 +38,10 @@ img {
     justify-items: center !important;
 }
 
+.flex-space-between {
+    justify-content: space-between !important;
+}
+
 .flex-gap-none {
     gap: 0 !important;
 }
