--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -126,6 +126,8 @@
 @import 'includes/blocks/block-pincode';
 @import 'includes/blocks/block-fund-request';
 @import 'includes/blocks/block-fund-requests';
+@import 'includes/blocks/block-fund-request-conversations';
+@import 'includes/blocks/block-fund-request-clarifications';
 @import 'includes/blocks/block-products';
 @import 'includes/blocks/block-products-list';
 @import 'includes/blocks/block-products-icons-info';
