--- a/react/assets/forus-webshop/scss/includes/blocks/block-file-uploader.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-file-uploader.scss
@@ -245,6 +245,7 @@
                 font-size: 11px;
                 font-weight: 400;
                 line-height: 11px;
+                font-family: var(--base-font), serif;
 
                 &::before {
                     content: '*';
@@ -296,6 +297,7 @@
                 font-size: 11px;
                 font-weight: 400;
                 line-height: 11px;
+                font-family: var(--base-font), serif;
 
                 &::before {
                     content: '*';
