--- a/react/assets/forus-webshop/scss/includes/blocks/block-profile.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-profile.scss
@@ -122,6 +122,7 @@
                 font: 400 14px/22px var(--base-font);
                 color: var(--tc);
                 width: 100%;
+                margin: 0 0;
             }
         }
 
